--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/04leslie/Portfolio.git",
+  "homepage": "https://04leslie.github.io/Portfolio/",
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
